test/parser/func_decl.0.stderr
<source>:6:14: error: expected parameter declarator
    6 | fn f3(i: i32, ) {}
      |              ^
<source>:9:4: error: redeclaration of function 'f3'
    9 | fn f3() {}
      |    ~~
<source>:12:15: error: identifier 'x' is bound more than once in this parameter list
   12 | fn f4(x: i32, x: i32) {}
      |               ~
<source>:17:27: error: default argument missing for parameter 2 of function 'f6'
<source>:20:7: error: expected parameter declarator
   20 | fn f7(,) {}
      |       ^
<source>:20:8: error: expected parameter declarator
   20 | fn f7(,) {}
      |        ^
<source>:24:8: error: expected function body after function declarator
   24 | fn f8()
      |        ^
<source>:27:24: error: default argument references parameter 'x'
   27 | fn f9(x: i32, y: i32 = x) {}
      |                        ~
